--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,21 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+/config/master.key
+/config/database.yml
+/config/application.yml
+/config/environments/*.local.yml
+
+/test/*
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
